--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,20 @@
+html {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /*tirar barra de rolagem horizontal criada por causa do deslocamento do link do twitter*/
+    perspective: 6px;
+    perspective-origin: 50% 160px
+}
+
 .foto-home {
     height: 200px;
+    border-radius: 10% 50% / 50% 10%;
 }
 .saudacao p {
     font-size: 1.5em;
@@ -22,6 +37,8 @@
 .saudacao em {
     color: #851944;
     font-size: 4em;
+    display: inline-block;
+    transform: rotate(-8deg) skew(-8deg);
 }
 .botao-index {
     font-size: 1.25em;
@@ -41,6 +58,7 @@
     font-size: 3em;
     text-transform: uppercase;
     margin-bottom: .5em;
+    text-shadow: 2px 2px #000;
 }
 .trabalhos {
     background-color: #3C1D3D;
@@ -94,67 +112,100 @@ main {
     float: none;
 }
 
+.palavras-home {    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.palavras-home li {
+    font-size: 400%;
+}
+
 .palavra-home {
     position: absolute;
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
-    color: #D5447E;
-
+    color: #D5447E;   
 }
 
 .eficiencia {
-    top: 20%;
-    left: 75%;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%) translateZ(4px) rotate(-5deg) scale(.25);
+    opacity: .9;
 }
 
 .boas-praticas {
     top: 70%;
     left: 20%;
+    transform: translate(-50%, -50%) translateZ(1px) rotate(10deg) scale(.25);
+    opacity: .3;
 }
 
 .codigo-limpo {
     top: 45%;
-    left: 10%;
+    left: 25%;
+    transform: translate(-50%, -50%) translateZ(2px) rotate(-10deg) scale(.25);
+    opacity: .6;
 }
 
 .css3 {
-    top: 50%;
-    left: 30%;
+    top: 55%;
+    left: 35%;
+    transform: translate(-50%, -50%) translateZ(2px) rotate(5deg) scale(.25);
+    opacity: .6;
 }
 
 .html5 {
-    top: 40%;
-    left: 80%;
+    top: 30%;
+    left: 65%;
+    transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+    opacity: .6;
 }
 
 .javascript {
-    top: 10%;
+    top: 15%;
     left: 60%;
+    transform: translate(-50%, -50%) translateZ(1px) rotate(-5deg) scale(.25);
+    opacity: .3;
 }
 
 .acessibilidade {
     top: 30%;
-    left: 25%;
+    left: 35%;
+    transform: translate(-50%, -50%) translateZ(3px) rotate(-5deg) scale(.25);
+    opacity: .8;
 }
 
 .responsivo {
-    top: 15%;
-    left: 15%;
+    top: 40%;
+    left: 40%;
+    transform: translate(-50%, -50%) translateZ(3px) rotate(10deg) scale(.25);
+    opacity: .8;
 }
 
 .otimizacoes {
-    top: 60%;
-    left: 70%;
+    top: 70%;
+    left: 65%;
+    transform: translate(-50%, -50%) translateZ(2px) rotate(-5deg) scale(.25);
+    opacity: .6;
 }
 
 .agilidade {
-    top: 10%;
-    left: 30%;
+    top: 75%;
+    left: 35%;
+    transform: translate(-50%, -50%) translateZ(1px) rotate(5deg) scale(.25);
+    opacity: .3;
 }
 
 .design {
-    top: 35%;
-    left: 65%;
+    top: 40%;
+    left: 60%;
+    transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+    opacity: .6;
 }
 
 header {
@@ -182,4 +233,26 @@ header {
 
 .blog li {
     width: 30%;
+}
+
+.banner-twitter {
+    width: 14em;
+    line-height: 1;
+    padding: 1em 0;
+    box-sizing: border-box;
+
+    text-align: center;
+    text-decoration: none;
+    background-color: #3C1D3D;
+    color: white;
+    border: .25em solid black;
+
+    font-size: 1.2em;
+    font-family: "Open Sans Condensed", sans-serif;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform-origin: 0 0;
+    transform: translate(6.5754em, -2.4749em) rotate(45deg);
 }
