--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,14 @@ body {
 }
 .trabalhos {
     background-color: #3C1D3D;
+    background-image: linear-gradient(to bottom right, transparent,
+                                                       transparent 14px,
+                                                       rgba(0, 0, 0, 0.1) 14px,
+                                                       rgba(0, 0, 0, 0.1) 15px,
+                                                       transparent 15px,
+                                                       transparent);
+    background-size: 20px 20px;
+    background-attachment: fixed;
     border-top: .5em solid #000;
     border-bottom: .5em solid #000;
 }
@@ -82,6 +90,14 @@ body {
 }
 .blog {
     background-color: #999;
+    background-image: linear-gradient(45deg,
+                        transparent,
+                        transparent 14px,
+                        rgba(0, 0, 0, .1) 14px,
+                        rgba(0, 0, 0, .1) 15px,
+                        transparent 15px,
+                        transparent);
+    background-size: 20px 20px;
     color: #FFF;
     border-bottom: .5em solid #851944;
     position: relative;
